@@ -19,6 +19,7 @@
 	- fix: --excludepath was broken (#24434).
 	- fix: s390 (and ppc?) could return CPIOERR_BAD_HEADER (#28645).
 	- fix: Fwrite's are optimized out by aggressive compiler(irix) (#34711).
+	- portability: vsnprintf/snprintf wrappers for those without (#34657).
 
 4.0 -> 4.0.2
 	- fix: avoid calling getpass twice as side effect of xstrdup macro
